--- a/src/components/header/navItem/navItem.css
+++ b/src/components/header/navItem/navItem.css
@@ -1,4 +1,12 @@
-.header__nav-link {
+.header__navItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    gap: 3rem;
+}
+
+.header__navItem-link {
     text-decoration: none;
     font-weight: 400;
     cursor: pointer;
